[OPENMEETINGS-2509] web session is invalidated on exit